--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,6 +14,25 @@
     <a href="/signup">Sign Up</a> | <a href="/login">Login</a>
   <% } %>
   <hr>
+
+
+<center>
+
+
+  <div id="ad">
+  <script type="text/javascript">
+    atOptions = {
+      'key' : '0f60b79fd3e5b8703a780ac8b38d1278',
+      'format' : 'iframe',
+      'height' : 60,
+      'width' : 468,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.highperformanceformat.com/0f60b79fd3e5b8703a780ac8b38d1278/invoke.js"></script>
+</div>
+
+</center>
   <% blogs.forEach(blog => { %>
     <div>
       <img src="<%= blog.thumbnail %>" alt="Thumbnail" style="width: 200px; height: auto;">
@@ -28,5 +47,41 @@
     </div>
     <hr>
   <% }) %>
+
+
+
+
+  
+  <script async="async" data-cfasync="false" src="//pl25567305.profitablecpmrate.com/2633c36c177cec6f69827b38965255fc/invoke.js"></script>
+  <div id="container-2633c36c177cec6f69827b38965255fc"></div>
+
+
+  <script async="async" data-cfasync="false" src="//pl25567305.profitablecpmrate.com/2633c36c177cec6f69827b38965255fc/invoke.js"></script>
+<div id="container-2633c36c177cec6f69827b38965255fc"></div>
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : '0f60b79fd3e5b8703a780ac8b38d1278',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/0f60b79fd3e5b8703a780ac8b38d1278/invoke.js"></script>
+
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : '0f60b79fd3e5b8703a780ac8b38d1278',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/0f60b79fd3e5b8703a780ac8b38d1278/invoke.js"></script>
+
+
 </body>
 </html>
