--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,6 +11,21 @@
   <h1>Welcome, <%= user.username %></h1>
   <a href="/">Back to Home</a> | <a href="/logout">Logout</a>
   <h2>Your Blogs</h2>
+
+
+
+      <script type="text/javascript">
+        atOptions = {
+          'key' : '0f60b79fd3e5b8703a780ac8b38d1278',
+          'format' : 'iframe',
+          'height' : 60,
+          'width' : 468,
+          'params' : {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/0f60b79fd3e5b8703a780ac8b38d1278/invoke.js"></script>
+
+
   <% blogs.forEach(blog => { %>
     <div>
       <h3><%= blog.title %></h3>
@@ -19,5 +34,22 @@
     </div>
     <hr>
   <% }) %>
+
+
+
+  
+  <script async="async" data-cfasync="false" src="//pl25567305.profitablecpmrate.com/2633c36c177cec6f69827b38965255fc/invoke.js"></script>
+  <div id="container-2633c36c177cec6f69827b38965255fc"></div>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '0f60b79fd3e5b8703a780ac8b38d1278',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/0f60b79fd3e5b8703a780ac8b38d1278/invoke.js"></script>
+
 </body>
 </html>
