--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,6 +16,35 @@
     <input type="password" name="password" placeholder="Password" required    class="input">
     <button type="submit">Sign Up</button>
   </form>
+
+
+
+<br><br>
+
+   <div>
+  <script async="async" data-cfasync="false" src="//pl25567305.profitablecpmrate.com/2633c36c177cec6f69827b38965255fc/invoke.js"></script>
+  <div id="container-2633c36c177cec6f69827b38965255fc"></div>
+</div>
+
+
+<div>
+  
+  
+  <div id="ad">
+    <script type="text/javascript">
+      atOptions = {
+        'key' : '0f60b79fd3e5b8703a780ac8b38d1278',
+        'format' : 'iframe',
+        'height' : 60,
+        'width' : 468,
+        'params' : {}
+      };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/0f60b79fd3e5b8703a780ac8b38d1278/invoke.js"></script>
+  </div>
+
+
+</div>
   </center>
 </body>
 </html>
