--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,11 +7,11 @@
 </head>
 <style>
   *{
-    background-color: black;
-    margin: 0;
+   margin: 0;
     padding:0;
     color:white;
     font-family: 'Times New Roman', Times, serif;
+    z-index: 1;
     
 
   }
