--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -51,5 +51,8 @@
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/0f60b79fd3e5b8703a780ac8b38d1278/invoke.js"></script>
 
+
+<a href="" rel="nofollow"><img alt="banner" src="https://landings-cdn.adsterratech.com/referralBanners/png/80%20x%2030%20px.png" /></a>
+
 </body>
 </html>
