--- a/views/home.ejs
+++ b/views/home.ejs
@@ -82,6 +82,10 @@
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/0f60b79fd3e5b8703a780ac8b38d1278/invoke.js"></script>
 
+ <div id="ad">
+  <script async="async" data-cfasync="false" src="//pl25567305.profitablecpmrate.com/2633c36c177cec6f69827b38965255fc/invoke.js"></script>
+<div id="container-2633c36c177cec6f69827b38965255fc"></div></div>
+
 
 </body>
 </html>
