--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -54,5 +54,14 @@
 
 <a href="" rel="nofollow"><img alt="banner" src="https://landings-cdn.adsterratech.com/referralBanners/png/80%20x%2030%20px.png" /></a>
 
+
+
+   <div>
+  <script async="async" data-cfasync="false" src="//pl25567305.profitablecpmrate.com/2633c36c177cec6f69827b38965255fc/invoke.js"></script>
+  <div id="container-2633c36c177cec6f69827b38965255fc"></div>
+</div>
+
+
+
 </body>
 </html>
