--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,6 +19,11 @@
 <center>
 
 
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/0f60b79fd3e5b8703a780ac8b38d1278/invoke.js"></script>
+
+
+
   <div id="ad">
   <script type="text/javascript">
     atOptions = {
